
- Bug #845802: Python crashed when __init__.py is a directory.

Extension modules
-----------------

- Patch #924294: Do no check for AF_INET6 if it is not defined.

- Patch #954115: Properly handle UNC roots in nt.stat.

- Bug #841757: xmlrpclib failed on structs with Unicode keys.

- Bug #954364: inspect.getframeinfo() sometimes produces incorrect traceback
  line numbers

Library
-------

- Bug #982215: The Back and Next buttons in bdist_wininst installers are now
  disabled during file copy operations.

- Bug #981299: rsync is now a recognized protocol in urlparse that uses a
  "netloc" portion of a URL.

- Patch #975885: Print file name in err msg in quiet mode of compileall.py.

- Bug #919012: shutil.move() raises an exception when you try to move a
  directory into itself.

- Bug #934282: make pydoc.stripid() be case-insensitive.

Build
-----

- Bug #978645: Modules/getpath.c now builds properly under --disable-framework
  build under OS X.

What's New in Python 2.3.4 (final)?
===================================

*Release date: 27-May-2004*

What's New in Python 2.3.4rc1?
==============================

*Release date: 13-May-2004*

Core and builtins
-----------------

- Bug #858016: isinstance() and issubclass() can have their second
  argument be a tuple whose nested depth is capped at the interpreter's
  recursion limit.  Raises RuntimeError if the limit reached.

- Made omitted callback and None equivalent for weakref.ref() and
  weakref.proxy(); the None case wasn't handled correctly in all
  cases.

- Fixed problem where PyWeakref_NewRef() and PyWeakref_NewProxy()
  assumed that initial existing entries in an object's weakref list
  would not be removed while allocating a new weakref object.  Since
  GC could be invoked at that time, however, that assumption was
  invalid.  In a truly obscure case of GC being triggered during
  creation for a new weakref object for an referent which already